local/path/envoy.yaml
                # Routing configuration for incoming requests.
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"] # Matches all domains.
                      routes:
                        # Route for /healthz
                        - match:
                            path: "/healthz"
                          route:
                            cluster: path_gateway_service
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        # Main API route for /v1 with path modifications.
                        - match:
                            safe_regex:
                              regex: "^/v1/?$"
                          route:
                            cluster: path_gateway_service
                            prefix_rewrite: "/v1/"
                            # Configures rate limiting descriptors.
                            rate_limits:
                              - actions:
                                  # Sends descriptors for rate limiting based on custom headers.
                                  - request_headers:
                                      header_name: "x-rl-endpoint-id"
                                      descriptor_key: "x-rl-endpoint-id"
                                  - request_headers:
                                      header_name: "x-rl-throughput"
                                      descriptor_key: "x-rl-throughput"
